--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   permission_handler: ^10.2.0
   flutter_lints: ^2.0.1
   flutter_meedu: ^8.0.0+1
+  freezed: ^2.2.1
+  freezed_annotation: ^2.2.0
+  build_runner: ^2.3.2
 
 dev_dependencies:
   flutter_test:
