--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   freezed: ^2.2.1
   freezed_annotation: ^2.2.0
   build_runner: ^2.3.2
+  geolocator: ^9.0.2
+  provider: ^6.0.4
 
 dev_dependencies:
   flutter_test:
