--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   build_runner: ^2.3.2
   geolocator: ^9.0.2
   provider: ^6.0.4
+  location: ^4.2.0
+  url_launcher: ^6.1.6
 
 dev_dependencies:
   flutter_test:
