--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,7 +73,10 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
-
+  fonts:
+    - family: titl_login
+      fonts:
+        - asset: assets/fonts/AlfaSlabOne-Regular.ttf
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
