--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   provider: ^6.0.4
   location: ^4.2.0
   url_launcher: ^6.1.6
+  percent_indicator: ^4.2.2
 
 dev_dependencies:
   flutter_test:
