--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   location: ^4.2.0
   url_launcher: ^6.1.6
   flutter_svg: ^1.1.6
+  scroll_snap_list: ^0.9.1
 
 dev_dependencies:
   flutter_test:
