--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,6 +78,8 @@ flutter:
     - assets/images/
     - assets/images/compostables/
     - assets/images/no_compostables/
+    - assets/images/manual_compost/
+
 
   fonts:
     - family: titl_login
