--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,6 +76,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+    - assets/images/composteras_comunitarias/
     - assets/images/compostables/
     - assets/images/no_compostables/
     - assets/images/manual_compost/
