--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -80,12 +80,17 @@ flutter:
     - assets/images/compostables/
     - assets/images/no_compostables/
     - assets/images/manual_compost/
+    - assets/images/compost_types/
+    - assets/images/steps/
 
 
   fonts:
     - family: titl_login
       fonts:
         - asset: assets/fonts/AlfaSlabOne-Regular.ttf
+    - family: OpenSans
+      fonts:
+            - asset: assets/fonts/OpenSans-Regular.ttf
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
