Pagina de consejos terminada
Se agregaron 8 tips a la pagina de consejos y se eliminaron algunos archivos innecesarios

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,6 +82,7 @@ flutter:
     - assets/images/manual_compost/
     - assets/images/compost_types/
     - assets/images/steps/
+    - assets/images/tips/
 
 
   fonts:
