--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,9 @@ dependencies:
   location: ^4.2.0
   url_launcher: ^6.1.6
   percent_indicator: ^4.2.2
+  fluttertoast: ^8.1.1
+  syncfusion_flutter_charts: ^20.3.58
+  cloud_firestore: ^4.1.0
 
 dev_dependencies:
   flutter_test:
