Agrego ícono y cambio nombre
flutter pub run flutter_launcher_icons:main es el comando para generar los png

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -9,9 +9,8 @@
 
    <application
         android:usesCleartextTraffic="true"
-        android:label="autocompost"
-        android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+        android:label="AutoCompost"
+        android:icon="@mipmap/launcher_icon">
         <activity
             android:name=".MainActivity"
             android:exported="true"
