--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,14 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  flutter_launcher_icons: ^0.11.0
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icons/icon-pila-de-compost.png"
+  adaptive_icon_background: "assets/icons/icon-pila-de-compost.png"
+
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
@@ -88,7 +96,6 @@ flutter:
     - assets/images/compost_types/
     - assets/images/steps/
     - assets/images/tips/
-
 
   fonts:
     - family: titl_login
