--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   syncfusion_flutter_charts: ^20.3.58
   fluttertoast: ^8.1.1
   firebase_messaging: ^14.1.2
+  rflutter_alert: ^2.0.4
 
 dev_dependencies:
   flutter_test:
