--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   firebase_messaging: ^14.1.2
   flutter_local_notifications: ^12.0.4
   rflutter_alert: ^2.0.4
+  flutter_ringtone_player: ^3.2.0
 
 dev_dependencies:
   flutter_test:
@@ -98,6 +99,7 @@ flutter:
     - assets/images/compost_types/
     - assets/images/steps/
     - assets/images/tips/
+    - assets/sounds/
 
   fonts:
     - family: titl_login
