Agrego la opción de múltiples composteras

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   fluttertoast: ^8.1.1
   firebase_messaging: ^14.1.2
   rflutter_alert: ^2.0.4
+  flutter_speed_dial: ^6.2.0
 
 dev_dependencies:
   flutter_test:
